Producer consumer, inter-thread flag, Latch, semaphore